# DMRradio

./: .gitignore  AmbeDecoder.cpp  AmbeDecoder.h  AmbeEncoder.cpp  AmbeEncoder.h  AudioEngine.cpp  AudioEngine.h  AudioLevelBar.cpp  AudioLevelBar.h  CMakeLists.txt  ConfigBuildInfo.h.in  ConfigManager.cpp  ConfigManager.h  Hotspot.cpp  Hotspot.h  HotspotManager.cpp  HotspotManager.h  MainWindow.cpp  MainWindow.h  README.md  app_icon.rc  main.cpp  resources.qrc
android/: AndroidManifest.xml
android/src/cz/dmrradio/: BackgroundService.java  DmrIdsDownloader.java  MainActivity.java  NativeAudio.java
mbelib/: mbelib.h
opendmr_lib/: README.md  dmr_codec.cpp  opendmr.cpp  opendmr.h
opendmr_lib/decoder/: CREDITS  ambe3600x2450.c  ambe_common.c  ambe_common.h  ecc.c  ecc_const.c  fftpack.c  fftpack.h  mbe_adaptive.c  mbe_adaptive.h  mbe_unvoiced_fft.c  mbe_unvoiced_fft.h  mbelib.c  mbelib.h
opendmr_lib/encoder/: CREDITS  aux_sub.cc  basic_op.h  basicop2.cc  cgolay24128.cpp  cgolay24128.h  dmr_prng_table.h  dsp_sub.cc  encode.cc  imbe_vocoder.cc  imbe_vocoder.h  imbe_vocoder_impl.cc  imbe_vocoder_impl.h  math_sub.cc  math_sub.h  mbeenc.cpp  mbeenc.h  pe_lpf.cc  pe_lpf.h  pitch_est.cc  pitch_est.h  pitch_ref.cc  pitch_ref.h  qnt_sub.cc  qnt_sub.h  rand_gen.cc  rand_gen.h  sa_encode.cc  sa_encode.h  tbls.cc  tbls.h  typedef.h  typedefs.h  v_uv_det.cc  v_uv_det.h
